--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -6,31 +6,27 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="generator" content="Visual Studio Code">
-    <meta name="description" content="A web app for people who love Japanese City Pop">
-    <meta name="keywords" content="citypop, city pop, Tatsuro Yamashita, Mariya Takeuchi">
+    <meta name="description" content="Go on a Journey, Write a Journal.">
+    <meta name="keywords" content="journey, journal, journaly">
     <meta name="author" content="Ayumi Tanaka">
     <!-- OGP -->
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="Japanese City Pop"/>
-	<meta property="og:image:alt" content="Japanese City Pop">
-    <meta property="og:site_name" content="Japanese City Pop">
-	<meta property="og:url" content="https://japanese-city-pop.herokuapp.com">
-	<meta property="og:description" content="A web app for people who love Japanese City Pop">
-	<meta name="image" property="og:image" content="https://japanese-city-pop.herokuapp.com/static/image/ogp.png">
+	<meta property="og:title" content="Journaly"/>
+	<meta property="og:image:alt" content="Journaly">
+    <meta property="og:site_name" content="Journaly">
+	<meta property="og:url" content="https://my-journaly.herokuapp.com">
+	<meta property="og:description" content="Go on a Journey, Write a Journal.">
+	<meta name="image" property="og:image" content="https://my-journaly.herokuapp.com/static/image/ogp.png">
     <!-- Twitter -->
     <meta name="twitter:site" content="@ayumitanaka_13">
-    <meta name="twitter:title" content="Japanese City Pop">
+    <meta name="twitter:title" content="Journaly">
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="japanese-city-pop.herokuapp.com">
-    <meta name="twitter:url" content="https://japanese-city-pop.herokuapp.com">
-    <meta name="twitter:description" content="A web app for people who love Japanese City Pop">
-    <meta name="twitter:image" content="https://japanese-city-pop.herokuapp.com/static/image/ogp.png">
+    <meta property="twitter:domain" content="my-journaly.herokuapp.com">
+    <meta name="twitter:url" content="https://my-journaly.herokuapp.com">
+    <meta name="twitter:description" content="Go on a Journey, Write a Journal.">
+    <meta name="twitter:image" content="https://my-journaly.herokuapp.com/static/image/ogp.png">
     <!-- CSS -->
-    <link rel="stylesheet" href="/static/css/public/style.css">
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=La+Belle+Aurore&family=Zeyada&display=swap" rel="stylesheet">
-            
+    <link rel="stylesheet" href="/static/css/public/style.css">            
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/static/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/static/favicon/apple-icon-60x60.png">
@@ -127,6 +123,5 @@
     <script src="https://kit.fontawesome.com/4538f04da3.js" crossorigin="anonymous"></script>   
     <!-- javascript -->
     <script src="/static/js/index.js"></script>
-
 </body>
 </html>
