--- a/flaskr/static/css/public/style.css
+++ b/flaskr/static/css/public/style.css
@@ -1024,6 +1024,182 @@ ul {
 
 /* journal.html */
 
+.journal-style {
+  display: grid;
+  min-height: 100vh;
+  width: 100%;
+  gap: 0px;
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+@media (min-width: 1024px){
+  .journal-style{
+    gap: 2rem;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+.page-style {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 0.25rem;
+  height: 83.333333%;
+  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  width: 100%;
+}
+
+.page-top-style {
+  display: flex;
+  justify-content: center;
+  height: 50%;
+  position: relative;
+  width: 100%;
+}
+
+@media (min-width: 1280px){
+  .page-top-style{
+    height: 66.666667%;
+  }
+}
+
+.page-bottom-style {
+  display: flex;
+  align-items: center;
+  height: 50%;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  width: 100%;
+}
+
+@media (min-width: 1280px){
+  .page-bottom-style{
+    height: 33.333333%;
+  }
+}
+
+.photo-style-2 {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  --tw-border-opacity: 1;
+  border-color: rgba(255, 251, 235, var(--tw-border-opacity));
+  border-radius: 0.25rem;
+  border-width: 8px;
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  position: relative;
+  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  width: 83.333333%;
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  --tw-rotate: -2deg;
+}
+
+.tape-style-2 {
+  position: absolute;
+  top: -1rem;
+  width: 40%;
+}
+
+@media (min-width: 640px){
+  .tape-style-2{
+    top: -2.5rem;
+  }
+}
+
+@media (min-width: 1536px){
+  .tape-style-2{
+    top: -3.5rem;
+  }
+}
+
+.label-style {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  right: 0px;
+  top: 4rem;
+  width: 33.333333%;
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  --tw-rotate: 2deg;
+}
+
+.photo-h1-2 {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  text-align: center;
+}
+
+@media (min-width: 1280px){
+  .photo-h1-2{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+}
+
+@media (min-width: 1536px){
+  .photo-h1-2{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+}
+
+.label-h1 {
+  font-size: 0.75rem;
+  line-height: 1rem;
+  position: absolute;
+  text-align: center;
+}
+
+@media (min-width: 640px){
+  .label-h1{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
+@media (min-width: 1280px){
+  .label-h1{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+
+@media (min-width: 1536px){
+  .label-h1{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+}
+
+.info-style {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 0.5rem;
+  width: 100%;
+}
+
 /* add_journal.html */
 
 /* user.html */
@@ -1098,6 +1274,28 @@ ul {
 @media (min-width: 1024px){
   .icon-size{
     width: 16.666667%;
+  }
+}
+
+.icon-size-2 {
+  width: 33.333333%;
+}
+
+@media (min-width: 1024px){
+  .icon-size-2{
+    width: 50%;
+  }
+}
+
+@media (min-width: 1280px){
+  .icon-size-2{
+    width: 33.333333%;
+  }
+}
+
+@media (min-width: 1536px){
+  .icon-size-2{
+    width: 25%;
   }
 }
 
@@ -1477,12 +1675,11 @@ ul {
 
 .btn-orange {
   --tw-bg-opacity: 1;
-  background-color: rgba(255, 116, 0, var(--tw-bg-opacity));
+  background-color: rgba(255, 154, 0, var(--tw-bg-opacity));
 }
 
 .btn-orange:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+  background-color: transparent;
 }
 
 .btn-orange:focus{
@@ -1497,7 +1694,7 @@ ul {
 
 .btn-orange:hover{
   --tw-border-opacity: 1;
-  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+  border-color: rgba(255, 154, 0, var(--tw-border-opacity));
 }
 
 .btn-orange{
@@ -1546,8 +1743,7 @@ ul {
 }
 
 .btn-transparent {
-  --tw-bg-opacity: 1;
-  background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+  background-color: transparent;
 }
 
 .btn-transparent:hover{
@@ -1562,7 +1758,7 @@ ul {
 
 .btn-transparent{
   --tw-border-opacity: 1;
-  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+  border-color: rgba(255, 154, 0, var(--tw-border-opacity));
 }
 
 .btn-transparent:hover{
@@ -1602,7 +1798,7 @@ ul {
 
 .btn-transparent{
   --tw-text-opacity: 1;
-  color: rgba(255, 255, 255, var(--tw-text-opacity));
+  color: rgba(255, 154, 0, var(--tw-text-opacity));
   transition-duration: 300ms;
 }
 
