--- a/flaskr/static/css/src/style.css
+++ b/flaskr/static/css/src/style.css
@@ -85,6 +85,36 @@
         @apply text-center text-2xl md:text-3xl;
     }
     /* journal.html */
+    .journal-style {
+        @apply min-h-screen w-full grid grid-cols-1 lg:grid-cols-2 gap-0 lg:gap-8;
+    }
+    .page-style {
+        @apply h-5/6 w-full bg-cover bg-center bg-no-repeat rounded shadow-md;
+    }
+    .page-top-style {
+        @apply h-1/2 xl:h-2/3 w-full flex justify-center relative;
+    }
+    .page-bottom-style {
+        @apply h-1/2 xl:h-1/3 w-full flex items-center py-2 px-4;
+    }
+    .photo-style-2 {
+        @apply h-full w-5/6 flex justify-center relative bg-cover bg-center bg-no-repeat transform rounded shadow-md border-8 border-yellow-50 -rotate-2;
+    }
+    .tape-style-2 {
+        @apply w-2/5 absolute -top-4 sm:-top-10 2xl:-top-14;
+    }
+    .label-style {
+        @apply w-1/3 flex items-center justify-center absolute top-16 right-0 transform rotate-2;
+    }
+    .photo-h1-2 {
+        @apply text-center text-2xl xl:text-3xl 2xl:text-4xl;
+    }
+    .label-h1 {
+        @apply absolute text-center text-xs sm:text-lg xl:text-xl 2xl:text-2xl;
+    }
+    .info-style {
+        @apply w-full flex items-center justify-between mt-2; 
+    }
     /* add_journal.html */
     /* user.html */
     .user-style {
@@ -101,6 +131,9 @@
     }
     .icon-size {
         @apply w-1/2 sm:w-1/4 lg:w-1/6;
+    }
+    .icon-size-2 {
+        @apply w-1/3 lg:w-1/2 xl:w-1/3 2xl:w-1/4;
     }
     .img-size {
         @apply w-full sm:w-1/4 lg:w-1/5 p-2 md:p-4 lg:p-0;
@@ -159,10 +192,10 @@
         @apply bg-lightorange hover:bg-orange focus:outline-none shadow rounded-full cursor-pointer duration-300 text-white text-xs sm:text-sm py-1 sm:py-2 px-2 md:px-4;
     }
     .btn-orange {
-        @apply bg-orange hover:bg-gray-300 focus:bg-black focus:bg-opacity-5 focus:outline-none border sm:border-2 border-transparent hover:border-gray-300 shadow hover:shadow-none rounded-full cursor-pointer duration-300 text-white text-sm sm:text-base py-2 sm:py-1 px-4 sm:px-3;
+        @apply bg-lightorange hover:bg-transparent focus:bg-black focus:bg-opacity-5 focus:outline-none border sm:border-2 border-transparent hover:border-lightorange shadow hover:shadow-none rounded-full cursor-pointer duration-300 text-white text-sm sm:text-base py-2 sm:py-1 px-4 sm:px-3;
     }
     .btn-transparent {
-        @apply  bg-gray-300 hover:bg-lightorange focus:bg-orange focus:outline-none border sm:border-2 border-gray-300 hover:border-lightorange hover:shadow focus:shadow-inner rounded-full cursor-pointer duration-300 text-white text-sm sm:text-base py-2 sm:py-1 px-4 sm:px-3;
+        @apply  bg-transparent hover:bg-lightorange focus:bg-orange focus:outline-none border sm:border-2 border-lightorange hover:border-lightorange hover:shadow focus:shadow-inner rounded-full cursor-pointer duration-300 text-lightorange text-sm sm:text-base py-2 sm:py-1 px-4 sm:px-3;
     }
     .btn-back {
         @apply h-6 md:h-7 lg:h-8 xl:h-12 w-6 md:w-7 lg:w-8 xl:w-12 flex items-center justify-center bg-transparent hover:bg-white border lg:border-2 border-white shadow-none hover:shadow rounded-full duration-300 hover:text-orange;
