--- a/flaskr/templates/journal/journal.html
+++ b/flaskr/templates/journal/journal.html
@@ -7,48 +7,50 @@
 {{ super() }}
 {% endblock %}
 
-<div class="grid grid-cols-1 lg:grid-cols-2 gap-0 lg:gap-8 w-full min-h-screen border-2">
+<div class="journal-style">
     {% for journal in journals %}
     <div class="h-screen flex flex-wrap items-center border">
         <!-- journal -->
-        <div class="border-2 w-full h-5/6 shadow-md bg-no-repeat bg-cover bg-center rounded" style="background-image: url(/static/image/paper6.png);" id="{{ journal.id }}">
+        <div class="page-style" style="background-image: url(/static/image/paper6.png);" id="{{ journal.id }}">
             <!-- photo -->
-            <div class="border-2 w-full h-1/2 xl:h-2/3 flex justify-center relative">
-                <div class="flex justify-center w-5/6 h-full bg-no-repeat bg-cover bg-center relative transform -rotate-2 border-8 border-yellow-50 rounded shadow-md" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
-                    <img src="/static/image/tape.png" alt="" class="w-2/5 absolute -top-4 sm:-top-10 2xl:-top-14">
-                    <div class="w-full h-1/5 flex items-center justify-center absolute bottom-0 bg-yellow-50">
-                        <h1 class="text-2xl xl:text-3xl 2xl:text-4xl text-center">
+            <div class="page-top-style">
+                <div class="photo-style-2" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
+                    <img src="/static/image/tape.png" alt="" class="tape-style-2">
+                    <div class="photo-bottom-style">
+                        <h1 class="photo-h1-2">
                             {{ journal.title }}
                         </h1>
                     </div>
                 </div>
-                <div class="w-1/3 absolute top-16 right-0 transform rotate-2 flex items-center justify-center">
+                <div class="label-style">
                     <img src="/static/image/label3.png" alt="" class="w-full shadow-md">
-                    <h1 class="absolute text-xs sm:text-lg xl:text-xl 2xl:text-2xl text-center">
+                    <h1 class="label-h1">
                         {{ journal.city }}, {{ journal.country }}
                     </h1>
                 </div>
             </div>
             <!-- comment -->
-            <div class="flex items-center border-2 w-full h-1/2 xl:h-1/3 p-2 px-4 rounded">
+            <div class="page-bottom-style">
                 <div class="2xl:mt-4">
                     <h1>
                         {{ journal.start_date.strftime('%Y. %m. %d') }} - {{ journal.end_date.strftime('%Y. %m. %d') }}
                     </h1>
                     <p class="font-light sm:text-sm">{{ journal.comment }}</p>
-        
-                    <div class="w-full flex items-center justify-between mt-2 border">
+
+                    <!-- journal info -->
+                    <div class="info-style">
                     {% for user in users %}
                     {% if journal.from_user_id == user.id %}
-                        <div class="w-1/3 items-center flex border">
-                            <div class="w-1/3 lg:w-1/2 xl:w-1/3 2xl:w-1/4">
+                        <!-- icon and name -->
+                        <div class="w-1/3 flex items-center">
+                            <div class="icon-size-2">
                                 {% if user.picture_path %}
                                 <img src="{{ url_for('static', filename=user.picture_path) }}" class="icon-style">
                                 {% else %}
                                 <img src="/static/image/logo2.png" class="icon-style">
                                 {% endif %}
                             </div>
-                            <h6 class="ml-2 font-bold">
+                            <h6 class="font-bold ml-2">
                                 {{ user.username }}
                             </h6>
                         </div>
@@ -56,37 +58,36 @@
                     {% endfor %}
 
                     {% if current_user.is_authenticated %}
-                    <form method="POST">
-                        {{ form.csrf_token }}
-                        {{ form.from_user_id(value=current_user.id) }}
-                        {{ form.to_journal_id(value=journal.id) }}
-                
-                        {% set isLiked = {'isLiked':False} %}
-                        {% for like_journal in like_journals %}
-                            {% if like_journal.from_user_id == current_user.id and like_journal.to_journal_id == journal.id %}
-                                {{ form.submit(value="♥ Liked",　class="btn-orange") }}
-                            {% if isLiked.update({'isLiked':True}) %}{% endif %}
+                        <!-- like button -->
+                        <form method="POST">
+                            {{ form.csrf_token }}
+                            {{ form.from_user_id(value=current_user.id) }}
+                            {{ form.to_journal_id(value=journal.id) }}
+                            {% set isLiked = {'isLiked':False} %}
+                            {% for like_journal in like_journals %}
+                                {% if like_journal.from_user_id == current_user.id and like_journal.to_journal_id == journal.id %}
+                                    {{ form.submit(value="♥ Liked",　class="btn-orange") }}
+                                {% if isLiked.update({'isLiked':True}) %}{% endif %}
+                                {% endif %}
+                            {% endfor %}
+                            {% if not isLiked.isLiked %}  
+                                {{ form.submit(class="btn-transparent") }}
                             {% endif %}
-                        {% endfor %}
-                        {% if not isLiked.isLiked %}  
-                            {{ form.submit(class="btn-transparent") }}
-                        {% endif %}
-                    </form>
+                        </form>
                     {% else %}
-                    <p>
-                        <a href="{{ url_for('signup.signup') }}">
-                            <button class="btn-lightorange-sm px-3">
-                                ♡ You can save it after sign up!
-                            </button>
-                        </a>
-                    </p>
+                        <p>
+                            <a href="{{ url_for('signup.signup') }}">
+                                <button class="btn-lightorange-sm px-3">
+                                    ♡ You can save it after sign up!
+                                </button>
+                            </a>
+                        </p>
                     {% endif %}
                     </div>
+                    <!-- end journal info -->
                 </div>
             </div>
-
         </div>
-
     </div>
     {% endfor %}
 </div>
