--- a/flaskr/static/css/src/style.css
+++ b/flaskr/static/css/src/style.css
@@ -186,16 +186,16 @@
         @apply w-4/5 lg:w-1/2 2xl:w-1/3;
     }
     .btn-lightorange {
-        @apply bg-lightorange hover:bg-orange focus:outline-none shadow rounded-full cursor-pointer duration-300 text-white text-sm sm:text-base py-1 sm:py-2 px-4 xl:px-6;
+        @apply bg-lightorange hover:bg-orange text-white focus:outline-none rounded-full shadow cursor-pointer duration-300 text-sm sm:text-base py-1 sm:py-2 px-4 xl:px-6;
     }
     .btn-lightorange-sm {
-        @apply bg-lightorange hover:bg-orange focus:outline-none shadow rounded-full cursor-pointer duration-300 text-white text-xs sm:text-sm py-1 sm:py-2 px-2 md:px-4;
+        @apply bg-lightorange hover:bg-orange text-white focus:outline-none rounded-full shadow cursor-pointer duration-300 text-xs sm:text-sm py-1 sm:py-2 px-2 md:px-4;
     }
     .btn-orange {
-        @apply bg-lightorange hover:bg-transparent focus:bg-black focus:bg-opacity-5 focus:outline-none border sm:border-2 border-transparent hover:border-lightorange shadow hover:shadow-none rounded-full cursor-pointer duration-300 text-white text-sm sm:text-base py-2 sm:py-1 px-4 sm:px-3;
+        @apply bg-lightorange hover:bg-transparent text-white hover:text-lightorange focus:outline-none border sm:border-2 border-transparent hover:border-lightorange rounded-full shadow hover:shadow-none cursor-pointer duration-300 text-sm 2xl:text-base py-2 sm:py-1 px-4 sm:px-3;
     }
     .btn-transparent {
-        @apply  bg-transparent hover:bg-lightorange focus:bg-orange focus:outline-none border sm:border-2 border-lightorange hover:border-lightorange hover:shadow focus:shadow-inner rounded-full cursor-pointer duration-300 text-lightorange text-sm sm:text-base py-2 sm:py-1 px-4 sm:px-3;
+        @apply bg-transparent hover:bg-lightorange text-lightorange hover:text-white focus:outline-none border sm:border-2 border-lightorange hover:border-lightorange rounded-full hover:shadow focus:shadow-inner cursor-pointer duration-300 text-sm 2xl:text-base py-2 sm:py-1 px-4 sm:px-3;
     }
     .btn-back {
         @apply h-6 md:h-7 lg:h-8 xl:h-12 w-6 md:w-7 lg:w-8 xl:w-12 flex items-center justify-center bg-transparent hover:bg-white border lg:border-2 border-white shadow-none hover:shadow rounded-full duration-300 hover:text-orange;
