--- a/flaskr/static/css/src/style.css
+++ b/flaskr/static/css/src/style.css
@@ -192,10 +192,10 @@
         @apply bg-lightorange hover:bg-orange text-white focus:outline-none rounded-full shadow cursor-pointer duration-300 text-xs sm:text-sm py-1 sm:py-2 px-3 md:px-4;
     }
     .btn-orange {
-        @apply bg-lightorange hover:bg-transparent text-white hover:text-lightorange focus:outline-none border sm:border-2 border-transparent hover:border-lightorange rounded-full shadow hover:shadow-none cursor-pointer duration-300 text-sm 2xl:text-base py-2 sm:py-1 px-4 sm:px-3;
+        @apply bg-lightorange hover:bg-transparent text-white hover:text-lightorange focus:outline-none border sm:border-2 border-transparent hover:border-lightorange rounded-full shadow hover:shadow-none cursor-pointer duration-300 text-sm py-2 sm:py-1 px-4 sm:px-3;
     }
     .btn-transparent {
-        @apply bg-transparent hover:bg-lightorange text-lightorange hover:text-white focus:outline-none border sm:border-2 border-lightorange hover:border-lightorange rounded-full hover:shadow focus:shadow-inner cursor-pointer duration-300 text-sm 2xl:text-base py-2 sm:py-1 px-4 sm:px-3;
+        @apply bg-transparent hover:bg-lightorange text-lightorange hover:text-white focus:outline-none border sm:border-2 border-lightorange hover:border-lightorange rounded-full hover:shadow focus:shadow-inner cursor-pointer duration-300 text-sm py-2 sm:py-1 px-4 sm:px-3;
     }
     .btn-back {
         @apply h-6 md:h-7 lg:h-8 xl:h-12 w-6 md:w-7 lg:w-8 xl:w-12 flex items-center justify-center bg-transparent hover:bg-white border lg:border-2 border-white shadow-none hover:shadow rounded-full duration-300 hover:text-orange;
