--- a/flaskr/static/css/src/style.css
+++ b/flaskr/static/css/src/style.css
@@ -98,7 +98,7 @@
         @apply h-1/2 xl:h-1/3 w-full flex items-center py-2 px-4;
     }
     .photo-style-2 {
-        @apply h-full w-5/6 flex justify-center relative bg-cover bg-center bg-no-repeat transform rounded shadow-md border-8 border-yellow-50 -rotate-2;
+        @apply h-full w-5/6 sm:w-2/3 lg:w-5/6 flex justify-center relative bg-cover bg-center bg-no-repeat transform rounded shadow-md border-8 border-yellow-50 -rotate-2;
     }
     .tape-style-2 {
         @apply w-2/5 absolute -top-4 sm:-top-10 2xl:-top-14;
@@ -201,7 +201,7 @@
         @apply h-6 md:h-7 lg:h-8 xl:h-12 w-6 md:w-7 lg:w-8 xl:w-12 flex items-center justify-center bg-transparent hover:bg-white border lg:border-2 border-white shadow-none hover:shadow rounded-full duration-300 hover:text-orange;
     }
     .btn-back-style {
-        @apply fixed bottom-2 md:bottom-3 xl:bottom-4 right-2 md:right-3 xl:right-4 text-white;
+        @apply fixed bottom-2 md:bottom-3 xl:bottom-4 right-1 md:right-3 xl:right-4 text-white;
     }
     .input-form {
         @apply h-10 w-full bg-white bg-opacity-70 hover:bg-opacity-90 focus:bg-opacity-90 text-gray-400 focus:outline-none shadow rounded-full duration-300 text-sm sm:text-base py-1 sm:py-2 px-2 sm:px-4;
