--- a/flaskr/templates/journal/journal.html
+++ b/flaskr/templates/journal/journal.html
@@ -50,7 +50,7 @@
                                 <img src="/static/image/logo2.png" class="icon-style">
                                 {% endif %}
                             </div>
-                            <h6 class="font-bold ml-2">
+                            <h6 class="ml-2">
                                 {{ user.username }}
                             </h6>
                         </div>
