--- a/flaskr/static/css/public/style.css
+++ b/flaskr/static/css/public/style.css
@@ -1045,6 +1045,8 @@ ul {
   background-size: cover;
   border-radius: 0.25rem;
   height: 83.333333%;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
   --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   width: 100%;
@@ -1157,9 +1159,16 @@ ul {
 }
 
 .photo-h1-2 {
-  font-size: 1.5rem;
-  line-height: 2rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
   text-align: center;
+}
+
+@media (min-width: 640px){
+  .photo-h1-2{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
 }
 
 @media (min-width: 1280px){
@@ -1483,8 +1492,6 @@ ul {
 .sub-subtitle {
   font-size: 1.25rem;
   line-height: 1.75rem;
-  -webkit-animation: none;
-          animation: none;
 }
 
 @media (min-width: 640px){
