--- a/flaskr/templates/contact/contact.html
+++ b/flaskr/templates/contact/contact.html
@@ -8,20 +8,15 @@
     <div class="bg-style">
     
         <div class="text-center">
-            <h1 class="text-4xl mb-8">Thank You</h1>
-            <h1 class="sub-subtitle font-normal mb-4">Feel free to contact me</h1>
-            <h1 class="sub-subtitle mb-8">
+            <h1 class="subtitle">Thank You</h1>
+            <h1 class="sub-subtitle mt-8">Feel free to contact me</h1>
+            <h1 class="sub-subtitle mt-4">
                 <small>
                     <a href="https://ayumitanaka.net">https://ayumitanaka.net</a>
                     <br>&copy; 2021  <a href="https://ayumitanaka.net">Ayumi Tanaka</a>
                     <br>All Rights Reserved
                 </small>
             </h1>
-            <!-- <div class="w-full flex justify-center ">
-                <div class="w-1/2 sm:w-1/4">
-                    <img src="/static/image/dance.png" alt="dance">
-                </div>
-            </div> -->
         </div>
 
     </div>
