--- a/flaskr/templates/500.html
+++ b/flaskr/templates/500.html
@@ -6,6 +6,7 @@
     {{ super() }}
     {% endblock %}
     
+    <div class="bg-style">
         <h1 class="subtitle">500 error</h1>
     </div>
 </div>
