--- a/flaskr/templates/contact/contact.html
+++ b/flaskr/templates/contact/contact.html
@@ -5,20 +5,19 @@
     {% block header %}
     {{ super() }}
     {% endblock %}
+
     <div class="bg-style">
-    
         <div class="text-center">
             <h1 class="subtitle">Thank You</h1>
-            <h1 class="sub-subtitle mt-8">Feel free to contact me</h1>
-            <h1 class="sub-subtitle mt-4">
+            <h6 class="mt-8">Feel free to contact me</h1>
+            <h6 class="mt-4">
                 <small>
                     <a href="https://ayumitanaka.net">https://ayumitanaka.net</a>
                     <br>&copy; 2021  <a href="https://ayumitanaka.net">Ayumi Tanaka</a>
                     <br>All Rights Reserved
                 </small>
-            </h1>
+            </h6>
         </div>
-
     </div>
 </div>
 
