--- a/flaskr/static/css/public/style.css
+++ b/flaskr/static/css/public/style.css
@@ -1158,6 +1158,36 @@ ul {
   --tw-rotate: 2deg;
 }
 
+.info-style {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 0.5rem;
+  width: 100%;
+}
+
+.icon-size-2 {
+  width: 33.333333%;
+}
+
+@media (min-width: 1024px){
+  .icon-size-2{
+    width: 50%;
+  }
+}
+
+@media (min-width: 1280px){
+  .icon-size-2{
+    width: 33.333333%;
+  }
+}
+
+@media (min-width: 1536px){
+  .icon-size-2{
+    width: 25%;
+  }
+}
+
 .photo-h1-2 {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -1213,14 +1243,6 @@ ul {
   }
 }
 
-.info-style {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-top: 0.5rem;
-  width: 100%;
-}
-
 /* add_journal.html */
 
 /* user.html */
@@ -1228,6 +1250,8 @@ ul {
 .user-style {
   height: 83.333333%;
   overflow: scroll;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   width: 80%;
 }
 
@@ -1240,83 +1264,70 @@ ul {
 .wrap-style {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
   margin-top: 1rem;
-  margin-bottom: 1rem;
-  margin-left: 3rem;
-  margin-right: 3rem;
+  width: 100%;
+}
+
+@media (min-width: 1024px){
+  .wrap-style{
+    margin-top: 2rem;
+  }
 }
 
 .user-icon-style {
   display: flex;
   justify-content: center;
   margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
 }
 
 @media (min-width: 768px){
   .user-icon-style{
     margin-top: 1rem;
-    margin-bottom: 1rem;
   }
 }
 
-.user-form {
-  margin-top: 2rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
+.photo-style-3 {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  --tw-border-opacity: 1;
+  border-color: rgba(255, 251, 235, var(--tw-border-opacity));
+  border-radius: 0.25rem;
+  border-width: 8px;
+  display: flex;
+  justify-content: center;
+  height: 14rem;
+  margin: 1rem;
+  position: relative;
+  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   width: 100%;
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  --tw-rotate: -2deg;
 }
 
 @media (min-width: 640px){
-  .user-form{
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-}
-
-@media (min-width: 768px){
-  .user-form{
-    padding-left: 4rem;
-    padding-right: 4rem;
-  }
-}
-
-.icon-size {
-  width: 50%;
-}
-
-@media (min-width: 640px){
-  .icon-size{
-    width: 25%;
-  }
-}
-
-@media (min-width: 1024px){
-  .icon-size{
-    width: 16.666667%;
-  }
-}
-
-.icon-size-2 {
-  width: 33.333333%;
-}
-
-@media (min-width: 1024px){
-  .icon-size-2{
-    width: 50%;
-  }
-}
-
-@media (min-width: 1280px){
-  .icon-size-2{
+  .photo-style-3{
+    margin: 0.5rem;
     width: 33.333333%;
   }
 }
 
-@media (min-width: 1536px){
-  .icon-size-2{
-    width: 25%;
+.icon-size {
+  width: 33.333333%;
+}
+
+@media (min-width: 640px){
+  .icon-size{
+    width: 16.666667%;
   }
 }
 
@@ -1341,6 +1352,26 @@ ul {
   .img-size{
     padding: 0px;
     width: 20%;
+  }
+}
+
+.user-form {
+  margin-top: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  width: 100%;
+}
+
+.photo-h1-3 {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  text-align: center;
+}
+
+@media (min-width: 640px){
+  .photo-h1-3{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 
