--- a/flaskr/static/css/src/style.css
+++ b/flaskr/static/css/src/style.css
@@ -106,37 +106,43 @@
     .label-style {
         @apply w-1/3 flex items-center justify-center absolute top-16 right-0 transform rotate-2;
     }
+    .info-style {
+        @apply w-full flex items-center justify-between mt-2; 
+    }
+    .icon-size-2 {
+        @apply w-1/3 lg:w-1/2 xl:w-1/3 2xl:w-1/4;
+    }
     .photo-h1-2 {
         @apply text-center text-xl sm:text-2xl xl:text-3xl 2xl:text-4xl;
     }
     .label-h1 {
         @apply absolute text-center text-xs sm:text-lg xl:text-xl 2xl:text-2xl;
     }
-    .info-style {
-        @apply w-full flex items-center justify-between mt-2; 
-    }
     /* add_journal.html */
     /* user.html */
     .user-style {
-        @apply h-5/6 w-4/5 xl:w-1/2 overflow-scroll;
+        @apply h-5/6 w-4/5 xl:w-1/2 overflow-scroll py-4;
     }
     .wrap-style {
-        @apply flex flex-wrap justify-around my-4 mx-12;
+        @apply w-full flex flex-wrap justify-center mt-4 lg:mt-8;
     }
     .user-icon-style {
-        @apply flex justify-center my-2 md:my-4;
+        @apply flex justify-center mt-2 md:mt-4;
     }
-    .user-form {
-        @apply w-full px-4 sm:px-8 md:px-16 mt-8;
+    .photo-style-3 {
+        @apply h-56 w-full sm:w-1/3 flex justify-center relative bg-cover bg-center bg-no-repeat transform rounded shadow-md border-8 border-yellow-50 -rotate-2 m-4 sm:m-2;
     }
     .icon-size {
-        @apply w-1/2 sm:w-1/4 lg:w-1/6;
-    }
-    .icon-size-2 {
-        @apply w-1/3 lg:w-1/2 xl:w-1/3 2xl:w-1/4;
+        @apply w-1/3 sm:w-1/6;
     }
     .img-size {
         @apply w-full sm:w-1/4 lg:w-1/5 p-2 md:p-4 lg:p-0;
+    }
+    .user-form {
+        @apply w-full mt-8 px-4;
+    }
+    .photo-h1-3 {
+        @apply text-center text-lg sm:text-xl;
     }
     /* search.html */
     .wrap-full-style {
