--- a/flaskr/templates/user/user.html
+++ b/flaskr/templates/user/user.html
@@ -7,16 +7,14 @@
     {{ super() }}
     {% endblock %}
 
-    <div class="bg-style borde-4">
-    
-        <div class="user-style py-4">
+    <div class="bg-style">
+        <div class="user-style">
             {% if current_user.is_authenticated %}
             <h1 class="subtitle">Hello, {{current_user.username}}</h1>
-            <div class="white-style">
+            <div class="white-style px-4 sm:px-0">
                 <div class="w-full text-center">
-                    <h6>
-                        Your Profile
-                    </h6>
+                    <!-- profile -->
+                    <h6>Your Profile</h6>
                     <div class="user-icon-style">
                         <div class="icon-size">
                             {% if current_user.picture_path %}
@@ -26,11 +24,11 @@
                             {% endif %}
                         </div>
                     </div>
-
+                    <!-- upload icon -->
                     <form method="POST" enctype="multipart/form-data" class="user-form">
                         {{form.csrf_token}}
                         <div class="flex">
-                            <h6 class="w-full pr-0 md:pr-2">
+                            <h6 class="w-full pr-2">
                                 {{render_field(form.picture_path, class="h-full input-form", placeholder="Upload your icon")}}
                             </h6>
                             <h6>
@@ -38,19 +36,18 @@
                             </h6>
                         </div>
                     </form>
-                    
+                    <!-- your journal -->
                     <h6 class="mt-8 lg:mt-16">
                         Your Journals
-                    </h6>
-    
-                    <div class="w-full flex flex-wrap justify-center">
+                    </h6>    
+                    <div class="wrap-style">
                         {% for journal in journals %}
                         {% if current_user.id == journal.from_user_id %}
-                        <div class="flex justify-center w-full sm:w-1/3 h-56 bg-no-repeat bg-cover bg-center relative transform -rotate-2 border-8 border-yellow-50 rounded shadow-md m-2" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
-                            <img src="/static/image/tape.png" alt="" class="w-2/5 absolute -top-6">
-                            <div class="w-full h-1/5 flex items-center justify-center absolute bottom-0 bg-yellow-50">
+                        <div class="photo-style-3" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
+                            <img src="/static/image/tape.png" alt="" class="tape-style -top-6">
+                            <div class="photo-bottom-style">
                                 <a href="{{ url_for('journal.journal', _anchor=journal.id) }}">
-                                <h1 class="text-xl text-center">
+                                <h1 class="text-lg sm:text-xl text-center">
                                     {{ journal.title }}
                                 </h1>
                                 </a>
@@ -59,18 +56,18 @@
                         {% endif %}
                         {% endfor %}
                     </div>
-
+                    <!-- your favs -->
                     <h6 class="mt-8 lg:mt-16">
                         Your Favorite Journals
                     </h6>
-                    <div class="w-full flex flex-wrap justify-center">                 
+                    <div class="wrap-style">                 
                     {% set isLiked = {'isLiked':False} %}
                     {% for like_journal in like_journals %}
                         {% for journal in journals %}
                         {% if like_journal.from_user_id == current_user.id and like_journal.to_journal_id == journal.id %}
-                        <div class="flex justify-center w-full sm:w-1/3 h-56 bg-no-repeat bg-cover bg-center relative transform -rotate-2 border-8 border-yellow-50 rounded shadow-md m-2" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
-                            <img src="/static/image/tape.png" alt="" class="w-2/5 absolute -top-6">
-                            <div class="w-full h-1/5 flex items-center justify-center absolute bottom-0 bg-yellow-50">
+                        <div class="photo-style-3 rotate-2" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
+                            <img src="/static/image/tape.png" alt="" class="tape-style -top-6">
+                            <div class="photo-bottom-style">
                                 <a href="{{ url_for('journal.journal', _anchor=journal.id) }}">
                                 <h1 class="text-xl text-center">
                                     {{ journal.title }}
