--- a/flaskr/templates/user/user.html
+++ b/flaskr/templates/user/user.html
@@ -47,7 +47,7 @@
                             <img src="/static/image/tape.png" alt="" class="tape-style -top-6">
                             <div class="photo-bottom-style">
                                 <a href="{{ url_for('journal.journal', _anchor=journal.id) }}">
-                                <h1 class="text-lg sm:text-xl text-center">
+                                <h1 class="text-center text-lg">
                                     {{ journal.title }}
                                 </h1>
                                 </a>
@@ -69,7 +69,7 @@
                             <img src="/static/image/tape.png" alt="" class="tape-style -top-6">
                             <div class="photo-bottom-style">
                                 <a href="{{ url_for('journal.journal', _anchor=journal.id) }}">
-                                <h1 class="text-xl text-center">
+                                <h1 class="text-center text-lg">
                                     {{ journal.title }}
                                 </h1>
                                 </a>
