--- a/flaskr/static/css/src/style.css
+++ b/flaskr/static/css/src/style.css
@@ -40,12 +40,6 @@
 }
 
 @layer components {
-    .photo {
-        @apply w-full absolute top-0 left-0 border-8 border-yellow-50 rounded shadow-md;
-    }
-    .frame {
-        @apply border-8 border-yellow-50 rounded shadow-md;
-    }
     /* base.html */
     .nav-bar-style {
         @apply w-full lg:w-auto hidden lg:flex flex-grow lg:items-center mt-2 lg:mt-0;
@@ -132,22 +126,19 @@
     .photo-style-3 {
         @apply h-56 w-full sm:w-1/3 flex justify-center relative bg-cover bg-center bg-no-repeat transform rounded shadow-md border-8 border-yellow-50 -rotate-2 m-4 sm:m-2;
     }
-    .icon-size {
-        @apply w-1/3 sm:w-1/6;
-    }
-    .img-size {
-        @apply w-full sm:w-1/4 lg:w-1/5 p-2 md:p-4 lg:p-0;
-    }
     .user-form {
         @apply w-full mt-8 px-0 sm:px-8;
+    }
+    .icon-size {
+        @apply w-1/3 sm:w-1/6;
     }
     .photo-h1-3 {
         @apply text-center text-base lg:text-lg;
     }
     /* search.html */
-    .wrap-full-style {
-        @apply w-full flex flex-wrap content-around justify-around my-3 lg:my-6 px-12;
-    }
+    /* .wrap-full-style {
+        @apply w-full flex flex-wrap content-around justify-center my-3 lg:my-6 px-12;
+    } */
     .search-form {
         @apply w-full mt-8 px-6 sm:px-8 md:px-16;
     }
