--- a/flaskr/static/css/public/style.css
+++ b/flaskr/static/css/public/style.css
@@ -1313,6 +1313,13 @@ ul {
   }
 }
 
+@media (min-width: 768px){
+  .user-form{
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+}
+
 .icon-size {
   width: 33.333333%;
 }
@@ -1337,60 +1344,6 @@ ul {
 }
 
 /* search.html */
-
-/* .wrap-full-style {
-        @apply w-full flex flex-wrap content-around justify-center my-3 lg:my-6 px-12;
-    } */
-
-.search-form {
-  margin-top: 2rem;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  width: 100%;
-}
-
-@media (min-width: 640px){
-  .search-form{
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-}
-
-@media (min-width: 768px){
-  .search-form{
-    padding-left: 4rem;
-    padding-right: 4rem;
-  }
-}
-
-.search-wrap {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-@media (min-width: 768px){
-  .search-wrap{
-    flex-wrap: nowrap;
-  }
-}
-
-.search-bar {
-  padding-right: 0px;
-  width: 100%;
-}
-
-@media (min-width: 768px){
-  .search-bar{
-    padding-right: 0.5rem;
-  }
-}
-
-@media (min-width: 1024px){
-  .search-bar{
-    padding-right: 1rem;
-  }
-}
 
 /* base components */
 
