--- a/flaskr/templates/search/search.html
+++ b/flaskr/templates/search/search.html
@@ -11,13 +11,13 @@
        
     <div class="layout-2">
             <h1 class="subtitle">Search</h1>
-            <form method="POST" class="search-form">
+            <form method="POST" class="user-form">
                 {{form.csrf_token}}
-                <div class="search-wrap">
-                    <h6 class="search-bar">
-                        {{render_field(form.keyword, class="input-form h-10", placeholder="Let's search with location name!")}}
+                <div class="flex">
+                    <h6 class="w-full pr-2">
+                        {{render_field(form.keyword, class="input-form h-10", placeholder="Let's search with the name of location!")}}
                     </h6>
-                    <h6 class="mt-4 md:mt-0">
+                    <h6 class="mt-0">
                         {{form.submit(class="btn-lightorange h-10")}}
                     </h6>
                 </div>
