--- a/flaskr/templates/search/search.html
+++ b/flaskr/templates/search/search.html
@@ -26,7 +26,7 @@
             {% if not form.keyword.data %}
             {% else %}
             <div class="white-style">
-                <div class="w-full h-48 sm:h-96 overflow-scroll">
+                <div class="w-full h-52 sm:h-80 xl:h-96 overflow-scroll">
                     <div class="wrap-style">
                     {% set isMatched = {'isMatched':False} %}
                     {% for journal in journals %}
