--- a/flaskr/templates/user/user.html
+++ b/flaskr/templates/user/user.html
@@ -29,7 +29,7 @@
                         {{form.csrf_token}}
                         <div class="flex">
                             <h6 class="w-full pr-2">
-                                {{render_field(form.picture_path, class="input-form h-full", placeholder="Upload your icon")}}
+                                {{render_field(form.picture_path, class="input-form h-full text-xs", placeholder="Upload your icon")}}
                             </h6>
                             <h6>
                                 {{form.submit(class="btn-lightorange h-full")}}
