--- a/flaskr/static/css/src/style.css
+++ b/flaskr/static/css/src/style.css
@@ -136,6 +136,9 @@
         @apply text-center text-base lg:text-lg;
     }
     /* search.html */
+    .result-style {
+        @apply h-56 sm:h-80 2xl:h-96 w-full overflow-scroll;
+    }
     /* base components */
     .base-style {
         @apply h-screen w-screen px-8 md:px-12 xl:px-20 pb-24 md:pb-32 xl:pb-36;
@@ -148,12 +151,6 @@
     }
     .subtitle {
         @apply text-center text-6xl xl:text-7xl;
-    }
-    .sub-subtitle {
-        @apply text-xl sm:text-2xl;
-    }
-    .small {
-        @apply text-xs sm:text-sm;
     }
     .white-style {
         @apply flex w-full items-center justify-center bg-white bg-opacity-40 shadow-md rounded mt-8 xl:mt-10 py-8;
@@ -189,7 +186,7 @@
         @apply fixed bottom-2 md:bottom-3 xl:bottom-4 right-1 md:right-3 xl:right-4 text-white;
     }
     .input-form {
-        @apply h-10 w-full bg-white bg-opacity-70 hover:bg-opacity-90 focus:bg-opacity-90 text-gray-400 focus:outline-none shadow rounded-full duration-300 text-sm sm:text-base py-1 sm:py-2 px-2 sm:px-4;
+        @apply h-10 w-full bg-white bg-opacity-60 hover:bg-opacity-90 focus:bg-opacity-90 text-gray-500 focus:outline-none rounded-full shadow duration-300 text-sm sm:text-base py-1 sm:py-2 px-2 sm:px-4;
     }
     .transform-scale {
         @apply transform hover:scale-105 ease-linear duration-300;
