--- a/flaskr/templates/add_journal/add_journal.html
+++ b/flaskr/templates/add_journal/add_journal.html
@@ -2,14 +2,14 @@
 {% extends "/base.html" %}
 {% block content %}
 
-<div class="base-style min-h-screen md:h-screen border-4">
+<div class="base-style border-4">
 {% block header %}
 {{ super() }}
 {% endblock %}
 
-    <div class="bg-style h-screen md:h-full border">
+    <div class="bg-style border">
 
-    <div class="layout-2 border">
+    <div class="user-style py-6 border">
         <h1 class="subtitle">Write Journal</h1>
         <div class="white-style">
 
